I started to determine the behavior of the application with various server responses during authorization.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,4 +5,9 @@
     <string name="authorization_widgets_showPassword_disable">Скрыть пароль</string>
     <string name="authorization_widgets_inputLogin">Введите логин</string>
     <string name="authorization_widgets_inputPassword">Введите пароль</string>
+    <string name="authorization_widgets_responseStatus_connectionRefused">Сервер не отвечает. Пожалуйста, повторите попытку позднее.</string>
+    <string name="authorization_widgets_responseStatus_userNotFound">Неверный логин или пароль</string>
+    <string name="authorization_widgets_responseStatus_notValidLogin">Неверный логин. Пожалуйста, проверьте ввод.</string>
+    <string name="authorization_widgets_responseStatus_notValidPassword">Неверныйпароль. Пожалуйста, проверьте ввод.</string>
+    <string name="authorization_widgets_responseStatus_responseError">Произошла внутренняя ошибка. Пожалуйста, свяжитесь со службой поддержки.</string>
 </resources>
