--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,4 +14,16 @@
     <string name="authorization_widgets_responseStatus_outdatedClient">Ваше приложение устарело.\\nПожалуйста, проверьте обновления.</string>
     <string name="enter_your_messege">Введите сообщение</string>
     <string name="send">Отправить</string>
+    <string name="authorization_widgets_no_account">Нет аккаунта?</string>
+    <string name="authorization_widgets_register">Зарегистрироваться</string>
+    <string name="registration_widgets_login">Придумайте логин</string>
+    <string name="registration_widgets_contact">Введите e-mail или номер телефона</string>
+    <string name="registration_widgets_password">Придумайте пароль</string>
+    <string name="registration_widgets_repeat_password">Повторите пароль</string>
+    <string name="registration_widgets_register">Зарегистрироваться</string>
+    <string name="registration_widgets_responseStatus_usernameAlreadyRegistered">Логин уже зарегистрирован</string>
+    <string name="registration_widgets_responseStatus_notValidPassword">Пароль должен содержать как минимум 1 цифру и специальный символ</string>
+    <string name="registration_widgets_responseStatus_notValidContact">E-mail должен содержать символ \"@\"</string>
+    <string name="registration_widgets_responseStatus_notValidName">Плохой логни. Пожалуйста, смените его.</string>
+    <string name="registration_widgets_responseStatus_contactAlreadyRegistered">Номер/E-mail уже зарегистрирован</string>
 </resources>
