--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="authorization_widgets_showPassword_disable">Hide password</string>
     <string name="authorization_widgets_inputLogin">Input login here</string>
     <string name="authorization_widgets_inputPassword">Input password here</string>
-    <string name="authorization_widgets_responseStatus_connectionRefused">The server is not responding.\\nPlease try again later.</string>
+    <string name="authorization_widgets_responseStatus_connectionRefused">The server is not responding. Please try again later.</string>
     <string name="authorization_widgets_responseStatus_userNotFound">Invalid username or password</string>
     <string name="authorization_widgets_responseStatus_notValidLogin">Invalid login. Please check the input.</string>
     <string name="authorization_widgets_input_notValidPassword">Invalid password. Please check the input.</string>
@@ -26,4 +26,8 @@
     <string name="registration_widgets_responseStatus_notValidContact">E-mail must contain \"@\" symbol</string>
     <string name="registration_widgets_responseStatus_notValidName">Invalid username. Please change it</string>
     <string name="registration_widgets_responseStatus_contactAlreadyRegistered">Contact alreadt registered</string>
+    <string name="pages_titles_notifications">Notifications</string>
+    <string name="pages_titles_feed">Feed</string>
+    <string name="pages_titles_channels">Channels</string>
+    <string name="pages_titles_settings">Settings</string>
 </resources>
